# kogwistar-llm-wiki

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  STATUS.md  pyproject.toml  pytest.ini  semantic_drift_detection.md
doc/: ADR-knowledge-management-policy-defaults.md  ai_os_gap_analysis.md  ai_os_roadmap.md  architecture.md  architecture_review_findings_checklist.md  cli_reference.md  core_workflows.md  current_branch_deep_architecture_review.md  dev_setup_guide.md  diagrams.md  distillation_core_migration.md  environment_cheatsheet.md  glossary.md  graph_space_namespace_refactor_checklist.md  happy_path_use_cases.md  happy_paths.md  inter_repo_api_and_event_catalog.md  inter_repo_update.md  kogwistar_ai_os_slice_checklist.md  lane_namespace_convention.md  longrun_workflow_crash_continuation_checklist.md  longrun_workflow_review_findings_checklist.md  longrun_workflow_test.md  maintenance_job_taxonomy.md  maintenance_ontology.md  maintenance_ontology_artifact_mapping.md  page-index-parser-deep-research-report.md  page_index_parser_refactor_checklist.md  promotion_evidence_pack_provenance_checklist.md  repo_boundary_and_contract_catalog.md  responsibility_matrix.md  testing_guide.md  update_delete_semantics.md  wisdom_graph_reference_invariants.md
scripts/: bootstrap-dev.sh
src/kogwistar_llm_wiki/: __init__.py  __main__.py  contracts.py  daemon.py  ingest_pipeline.py  longrun_parser_worker.py  longrun_trace_sink.py  maintenance_designs.py  maintenance_policy.py  models.py  namespaces.py  policies.py  projection.py  projection_worker.py  query.py  review_query.py  utils.py  worker.py
tests/: __init__.py  conftest.py  test_identities.py  test_models.py  test_namespaces.py
tests/fixtures/: requests.py
tests/integration/: test_ingest_pipeline_e2e.py  test_longrun_workflow_ingestion.py  test_obsidian_sink_end_to_end.py  test_obsidian_vault_on_disk.py
tests/smoke/: test_ingest_pipeline_smoke.py
tests/unit/: test_daemon_interrupt_recovery.py  test_graph_space_query.py  test_ingest_pipeline_branch_fixes.py  test_ingest_pipeline_candidate_crosslink.py  test_ingest_pipeline_ingest.py  test_ingest_pipeline_llm_text_parse.py  test_ingest_pipeline_orchestration.py  test_ingest_pipeline_parse_retry_history.py  test_ingest_pipeline_projection.py  test_ingest_pipeline_promote.py  test_ingest_pipeline_promotion_candidate.py  test_ingest_pipeline_register_source.py  test_knowledge_derivation.py  test_lane_message_contract_integration.py  test_llm_wiki_cli.py  test_llm_wiki_policies.py  test_longrun_pgvector_container_fixture.py  test_maintenance_policy.py  test_obsidian_sink_build.py  test_page_index_retry.py  test_projection_consistency.py  test_review_query.py  test_temporary_namespace.py  test_wisdom_distillation.py  test_worker_runtime_orchestration.py
