[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kogwistar-llm-wiki"
version = "0.2.0"
description = "LLM-Wiki: a continuously-learning knowledge system built on Kogwistar"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["knowledge-graph", "llm", "obsidian", "kogwistar", "wiki"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
# Runtime bundle: this package imports the sibling repos at import time and the
# bootstrap installs them editable before the root package.
dependencies = [
    "kogwistar",
    "kg-doc-parser",
    "kogwistar-obsidian-sink",
]

[project.optional-dependencies]
chromadb = ["chromadb>=0.6"]
test = [
    "pytest>=8.0",
    "pytest-anyio",
]
dev = [
    "kogwistar-llm-wiki[test,chromadb]",
]

[project.scripts]
llm-wiki = "kogwistar_llm_wiki.__main__:main"

# ---------------------------------------------------------------------------
# uv-specific: when using `uv`, resolve sibling packages from local paths.
# This section is ignored by pip/setuptools.
# ---------------------------------------------------------------------------
[tool.uv.sources]
# uv resolves these from local paths when available. Ignored by pip/setuptools.
kogwistar               = { path = "kogwistar",               editable = true }
kogwistar-obsidian-sink = { path = "kogwistar-obsidian-sink", editable = true }
# kg-doc-parser is imported at runtime by the app package.
kg-doc-parser           = { path = "kg-doc-parser",           editable = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["kogwistar-llm-wiki-tests-*"]
markers = [
    "manual: tests that are opt-in and may require local services",
    "integration: tests that require real external backends (Chroma, Obsidian vault)",
    "longrun: opt-in long-running workflow/daemon-style soak tests",
    "requires_ollama: tests that require a local Ollama service",
]
